# pysenal

./: .codecov.yml  .coveragerc  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  LICENSE.txt  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt
.github/workflows/: python.yml
docs/: Makefile  conf.py  index.rst
pysenal/: __init__.py
pysenal/io/: __init__.py  file.py
pysenal/utils/: __init__.py  logger.py  utils.py
python_arsenal/: skeleton.py
python_arsenal/io/: file.py
python_arsenal/utils/: logger.py
tests/: __init__.py  conftest.py  test_skeleton.py
tests/io/: test_file.py
tests/test_data/: a.json  a.jsonl  a.txt  a.txt.gbk
tests/utils/: test_logger.py  test_utils.py
